--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="header-actions">
 
         <button class="search">
-          <ion-icon name="search-outline"></ion-icon>
+          <ion-icon name="logo-twitter"></ion-icon>
         </button>
 
         <button class="btn-sign_in">
@@ -199,9 +199,7 @@
               <h2 class="about-title">Experience just for gamers <strong>offer</strong> </h2>
 
               <p class="about-text">
-                Nullam quis ante. Maecenas ullamcorper, dui et placerat feugiat, eros pede varius nisi, condimentum
-                viverra felis nunc
-                et lorem. In auctor lobortis lacus. Phasellus gravida semper nisi. Aliquam lobortis.
+                This experience is exclusively for gamers and offers them the opportunity to immerse themselves in a world of interactive entertainment. You can experience new games and technologies, and have fun together with other game enthusiasts. The offer is designed to satisfy the tastes of the most demanding gamers and provides a unique and unforgettable experience. Don't miss this opportunity to experience your passion for games like never before!
               </p>
 
               <p class="about-bottom-text">
@@ -229,7 +227,7 @@
               <h2 class="h3 tournament-title">Gaming tournaments !</h2>
 
               <p class="tournament-text">
-                Lpsum dolor sit amet, consectetur adipiscing elit, sed labore et dolore magna aliqua.
+                A new era of pay to earn online gaming is about to begin. Join and participate in the adventure together with other gamers.
               </p>
 
               <button class="btn btn-primary">Join with us</button>
@@ -238,12 +236,12 @@
 
             <div class="tournament-prize">
 
-              <h2 class="h3 tournament-prize-title">Prize pool</h2>
+              <h2 class="h3 Prize-title"><u>Prize pool</u></h2> <!-- h3 tournament-prize-title -->
 
               <data value="80000">$80000</data>
 
               <figure>
-                <img src="./assets/images/prize-img.png" alt="Prize image">
+                <img id="Prize-image" src="./assets/images/Opened-Treasure-Chest-PNG-Free-Download (1) (1).png" alt="Prize image"> <!-- ./assets/images/prize-img.png -->
               </figure>
 
             </div>
@@ -255,7 +253,7 @@
               <h2 class="h3 tournament-title">Prizes every week !</h2>
 
               <p class="tournament-text">
-                Lpsum dolor sit amet, consectetur adipiscing elit, sed labore et dolore magna aliqua.
+                Every week there will be new prices, the more people who enter to participate, the greater the prize pool will be. What are you waiting for?
               </p>
 
               <button class="btn btn-primary">Join with us</button>
@@ -321,25 +319,25 @@
 
               <li>
                 <figure class="gallery-item">
-                  <img src="./assets/images/gallery-img-1.jpg" alt="Gallery image">
+                  <img src="./assets/images/istockphoto-1340913476-170667a (1).jpg" alt="Gallery image"> <!-- ./assets/images/gallery-img-1.jpg -->
                 </figure>
               </li>
 
               <li>
                 <figure class="gallery-item">
-                  <img src="./assets/images/gallery-img-2.jpg" alt="Gallery image">
+                  <img src="./assets/images/istockphoto-1340913476-170667a (1).jpg" alt="Gallery image"> <!-- ./assets/images/gallery-img-2.jpg -->
                 </figure>
               </li>
 
               <li>
                 <figure class="gallery-item">
-                  <img src="./assets/images/gallery-img-3.jpg" alt="Gallery image">
+                  <img src="./assets/images/istockphoto-1340913476-170667a (1).jpg" alt="Gallery image"> <!--./assets/images/gallery-img-3.jpg  -->
                 </figure>
               </li>
 
               <li>
                 <figure class="gallery-item">
-                  <img src="./assets/images/gallery-img-4.jpg" alt="Gallery image">
+                  <img src="./assets/images/istockphoto-1340913476-170667a (1).jpg" alt="Gallery image"> <!-- ./assets/images/gallery-img-4.jpg -->
                 </figure>
               </li>
 
@@ -620,7 +618,7 @@
     <div class="footer-bottom">
       <div class="container">
         <p class="copyright">
-          Copyright &copy; 2022 <a href="#">codewithsadee</a>. all rights reserved
+          Copyright &copy; 2023 <a href="#">GAMEX</a>. all rights reserved
         </p>
 
         <figure class="footer-bottom-img">
