modified:   index.html

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="header-actions">
 
         <button class="search">
-          <ion-icon name="logo-twitter"></ion-icon>
+          <!-- <ion-icon name="logo-twitter"></ion-icon> --><img src="https://icons.iconarchive.com/icons/osiris/world-flags/16/00-cctld-us-icon.png" width="16" height="16">
         </button>
 
         <button class="btn-sign_in">
